Add nim-result + chronos example

--- a/.gitmodules
+++ b/.gitmodules
@@ -33,3 +33,21 @@
 	url = https://github.com/status-im/nim-chronos.git
 	ignore = dirty
 	branch = master
+[submodule "vendor/nim-waku"]
+	path = vendor/nim-waku
+	url = https://github.com/status-im/nim-waku.git
+	ignore = dirty
+	branch = master
+[submodule "vendor/nim-libp2p"]
+	path = vendor/nim-libp2p
+	url = https://github.com/status-im/nim-libp2p.git
+	ignore = dirty
+	branch = master
+[submodule "vendor/nim-sqlcipher"]
+	path = vendor/nim-sqlcipher
+	url = https://github.com/status-im/nim-sqlcipher.git
+	ignore = dirty
+	branch = master
+[submodule "vendor/nim-secp256k1"]
+	path = vendor/nim-secp256k1
+	url = https://github.com/status-im/nim-secp256k1.git
